--- a/kamaz-inf/motor_catalog/dvigatel_kamaz_5490.html
+++ b/kamaz-inf/motor_catalog/dvigatel_kamaz_5490.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Двигатель на КамАЗ 5490 - ЧелныАгрегатЦентр
+title: Двигатель на КамАЗ 5490 
 metadesc: Продаем двигатель на автомобиль КАМАЗ 5490 с доставкой по всей России. Прайс-лист, каталог, описание, характеристики, инструкции и советы эксплуатации. 
 metakeywords: двигатель КамАЗ 5490 740.70-1000400, купить, продажа, цена, стоимость
 h1: Двигатель на КамАЗ 5490.
@@ -23,6 +23,11 @@ h2:
         Комплектуется также двигателем<b> Mercedes-Benz (Daimler) OM 457 LA</b>,
         который эксплуатировался на модели Mercedes-Benz Axor (прототип 5490).<br>
         На обновленном КАМАЗ 5490 NEO остались те же моторы, но есть варианты с различной мощностью.
+        </p>
+        <p>
+            <div class="text-center w-100">
+                <a href="https://5490.chelnyagregatcentre.ru/" class="btn btn-lg btn-primary"> Двигатели и запчасти для КамАЗ 5490 </a>
+            </div>
         </p>
     </div>
     </div>
