--- a/korobka_peredach_kpp_kamaz.html
+++ b/korobka_peredach_kpp_kamaz.html
@@ -360,7 +360,7 @@ metakeywords: Двигатели КамАЗ 740 и Cummins купить прод
                             <tr>
                                 <td colspan="2">
                                     <strong>Запросить предложение</strong>
-                                    <div class="" style="float: right;"> <a href="tel:+78552783500" class="color_unset" >(8552) 78-35-00</a></div>
+                                    <div class="" style="float: right;"> <a href="tel:+78552783500" class="nocolor" >(8552) 78-35-00</a></div>
                                   </td>            
                               </tr>
                             <tr>
