--- a/zapchasti_dvigatel_kamaz.html
+++ b/zapchasti_dvigatel_kamaz.html
@@ -48,7 +48,7 @@ metakeywords: запчасти камаз
                 <div class="contents">
                   <ul>
                     <li style="margin-bottom:0px;">
-                      <h1 class="title text-left w-100">Запчасти к двигателям КамАЗ</h1>
+                      <h1 class="title text-left w-100">Запчасти к двигателям КамАЗ </h1>
                     </li>
                     <li style="margin-top:0px;">
                       <h2 class="title w-100">в наличии и по лучшим ценам!</h1>
@@ -57,7 +57,7 @@ metakeywords: запчасти камаз
                     
                     <li><i class="lni-check-mark-circle"></i> &nbsp;&nbsp;10 лет на рынке</li>
                     <li><i class="lni-check-mark-circle"></i> &nbsp;&nbsp;Полноценная гарантия со справедливыми условиями</li>
-                    <!-- <li><i class="lni-check-mark-circle"></i> &nbsp;&nbsp;Без предоплаты, оплата после осмотра</li> -->
+                    <li><i class="lni-check-mark-circle"></i> &nbsp;&nbsp;Без предоплаты, оплата после осмотра</li>
                   </ul>
                 </div>
               </div>
